# qr_code_backup

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  PHASE_2_FEATURES.md  QR_CODE_BACKUP.md  README.md  SECURITY.md  WEEK_2_3_ENCRYPTION_PLAN.md  WEEK_4_6_PARITY_PLAN.md  pyproject.toml  qr_code_backup.py  requirements.txt  setup.py
examples/: 3k_random_example.txt
tests/: __init__.py  pdf_helpers.py  test_combined_features.py  test_decode.py  test_encode.py  test_encryption.py  test_integration.py  test_mixed_documents.py  test_order_independence.py  test_parity.py  test_parity_recovery_scenarios.py
tests/test_data/: small.txt
